added fine-grained control over pathseq-db files; some run.config cleanup

--- a/config/run.config
+++ b/config/run.config
@@ -12,10 +12,17 @@ params {
 	publish_mode = "symlink"
 
 	/*
-	Set the path to a pathseq database.
+	Set the paths to pathseq database files.
 	*/
-	pathseq_database = "/g/scb/zeller/fspringe/Database/PathSeq_Legacy"
-	// pathseq_database = "/scratch/schudoma/vknight/PathSeq_Legacy"
+	// pathseq_database = "/g/scb/zeller/fspringe/Database/PathSeq_Legacy"
+	pathseq_database = "/g/scb/zeller/fspringe/Database/PathSeq_Dohlman"
+	pathseq_db_filter_bwa_image = "/g/scb/zeller/fspringe/Database/PathSeq_Dohlman/pathseq_host.fa.img"
+	pathseq_db_kmer_file = "/g/scb/zeller/fspringe/Database/PathSeq_Dohlman/pathseq_host.bfi"
+	pathseq_db_microbe_fasta = "/g/scb/zeller/fspringe/Database/PathSeq_Dohlman/pathseq_microbe.fa"
+	pathseq_db_microbe_bwa_image = "/g/scb/zeller/fspringe/Database/PathSeq_Dohlman/pathseq_microbe.fa.img"
+	pathseq_db_taxonomy_file = "/g/scb/zeller/fspringe/Database/PathSeq_Dohlman/pathseq_taxonomy.db"
+
+	/* Set the minimum readlength for pathseq to consider */
 	pathseq_min_clipped_read_length = 31
 
 	/*
@@ -35,7 +42,7 @@ params {
 	Set the path to a kraken2 database for kraken2-profiling
 	*/
 	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
-    kraken2_min_hit_groups = 10
+	kraken2_min_hit_groups = 10
 
 	/*
 	Set the path to a mapseq binary.
@@ -61,44 +68,50 @@ params {
 	*/
 	remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
 
-	/* 
-		bbduk qc parameters 
+	/*
+		bbduk qc parameters
 		s. https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
 		qtrim=rl trimq=3 : gentle quality trimming (only discard bases < phred 3; phred 2 = junk marker) on either side (rl) of the read
 		maq=25 : discard reads below average quality of pred 25
-		minlen=45 : discard reads < 45bp
 		ref=?? ktrim=r k=23 mink=11 hdist=1 tpe tbo : right-side k-mer based adapter clipping with 1 mismatch allowed, try overlap-detection (tbo), and trim pairs to same length (tpe) upon adapter detection
 		ftm=5 : get rid off (n*5)+1st base (last sequencing cycle illumina garbage)
 		entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
 	*/
 
 	qc_params_shotgun = "qtrim=rl trimq=3 maq=25 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+
+	/ * EXPERIMENTAL */
 	qc_params_amplicon_primers = "qtrim=rl trimq=3 ktrim=l k=14 mink=1 hdist=1 cu=t"
 	qc_params_amplicon = "qtrim=rl trimq=3 ktrim=l k=23 mink=1 hdist=1 tpe tbo cu=t"
-	//qc_minlen = 45
+	/ * \EXPERIMENTAL */
 
+	/* BBDUK LENGTH FILTER */
 	// only keep reads of at least length = qc_minlen
-    qc_minlen = 100
+	//qc_minlen = 45    // NGLess functional profiling
+	//qc_minlen = 100	// 16S gaga2
+	qc_minlen = 50
 
-    // If only primer lengths are supplied, figaro/dada2 will take care of primer removal.
-    // Otherwise, if primer sequences are supplied,
-    // primer + adapter removal is a two-step process:
-    // 1. gentle quality trimming (< phred 3) + remove left primer on 5'-R1 and potentially on 3'-R2 (rc)
-    // 2. remove right primer on 5'-R2 and potentially on 3'-R1 (rc)
+	/* STEPWISE 16S AMPLICON PRIMER REMOVAL */
+	// If only primer lengths are supplied, figaro/dada2 will take care of primer removal.
+	// Otherwise, if primer sequences are supplied,
+	// primer + adapter removal is a two-step process:
+	// 1. gentle quality trimming (< phred 3) + remove left primer on 5'-R1 and potentially on 3'-R2 (rc)
+	// 2. remove right primer on 5'-R2 and potentially on 3'-R1 (rc)
 
-    // Primer removal is highly dataset-specific, you might have to play with the settings below:
-    // also refer to: https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
-    // cu=t : allow degenerate primer sequences
-    // qtrim=rl trimq=3 : gentle quality trimming (< phred 3) on both sides
-    // ktrim=(r|l) : clip adapters from right xor left end -- DO NOT MODIFY.
-    // restrictleft|restrictright : only take into account the first / last N bases for adapter clipping
-    // k=9 hdist=1: adapter/primer k-mers of length 9 have to match with at most one mismatch
-    // mink=1: at the ends of reads, perfect (mismatch=0) adapter/primer k-mer matches of length 1 are allowed (similar to cutadapt)
+	// Primer removal is highly dataset-specific, you might have to play with the settings below:
+	// also refer to: https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
+	// cu=t : allow degenerate primer sequences
+	// qtrim=rl trimq=3 : gentle quality trimming (< phred 3) on both sides
+	// ktrim=(r|l) : clip adapters from right xor left end -- DO NOT MODIFY.
+	// restrictleft|restrictright : only take into account the first / last N bases for adapter clipping
+	// k=9 hdist=1: adapter/primer k-mers of length 9 have to match with at most one mismatch
+	// mink=1: at the ends of reads, perfect (mismatch=0) adapter/primer k-mer matches of length 1 are allowed (similar to cutadapt)
 	// -- to allow mismatches, set hdist2 to a positive, non-zero integer
 
-    p5_primer_params = "cu=t qtrim=rl ktrim=l trimq=3 k=9 mink=1 hdist=1 restrictleft=50"
-    p3_primer_params = "cu=t ktrim=r k=9 mink=1 hdist=1 restrictright=50"
+	p5_primer_params = "cu=t qtrim=rl ktrim=l trimq=3 k=9 mink=1 hdist=1 restrictleft=50"
+	p3_primer_params = "cu=t ktrim=r k=9 mink=1 hdist=1 restrictright=50"
 }
+
 
 /* section below needs to be adjusted to local cluster */
 executor {
@@ -124,7 +137,7 @@ process {
 	withName: fastqc {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
-        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
 		memory = {4.GB * task.attempt}
 		time = '7d'
@@ -133,7 +146,7 @@ process {
 	withName: multiqc {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
-        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
 		memory = {4.GB * task.attempt}
 		time = '7d'
@@ -165,7 +178,7 @@ process {
 		cpus = 2
 		//memory = {8.GB * task.attempt}
 		//memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
-		memory = {2.GB * task.attempt} 
+		memory = {2.GB * task.attempt}
 		time = '7d'
 		maxRetries = 3
 	}
@@ -240,52 +253,52 @@ process {
 		cpus = 1
 		memory = {2.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
 	withLabel: mapseq {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 16
 		memory = {8.GB * task.attempt}
 		time = '7d'
-		maxRetries = 3	
+		maxRetries = 3
 	}
-    withLabel: bbduk {
+	withLabel: bbduk {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
-        executor = "slurm"
-        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-        cpus = 4
-        memory = {8.GB * task.attempt}
-        time = '2h'
-        maxRetries = 3
-    }
-    withName: qc_bbmerge {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 4
+		memory = {8.GB * task.attempt}
+		time = '2h'
+		maxRetries = 3
+	}
+	withName: qc_bbmerge {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
-        executor = "slurm"
-        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-        cpus = 4
-        memory = {16.GB * task.attempt}
-        time = '2h'
-        maxRetries = 3
-    }
-    withName: concat_singles {
-        executor = "slurm"
-        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-        cpus = 1
-        memory = '2.GB'
-        time = '8h'
-        maxRetries = 3
-    }
-    withName: read_counter {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 4
+		memory = {16.GB * task.attempt}
+		time = '2h'
+		maxRetries = 3
+	}
+	withName: concat_singles {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = '2.GB'
+		time = '8h'
+		maxRetries = 3
+	}
+	withName: read_counter {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
-        executor = "slurm"
-        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-        cpus = 4
-        memory = {128.GB * task.attempt}
-        time = '8h'
-        maxRetries = 3
-    }
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 4
+		memory = {128.GB * task.attempt}
+		time = '8h'
+		maxRetries = 3
+	}
 
 }
 
