changed kraken2 config entry

--- a/config/run.config
+++ b/config/run.config
@@ -191,7 +191,7 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
-	withName: kraken2 {
+	withLabel: kraken2 {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
