re-activated mail(x) support

--- a/config/run.config
+++ b/config/run.config
@@ -2,6 +2,8 @@ params {
 
 	output_dir = "vknight_out"
 
+	mailer = "/usr/bin/mail"
+
 	/*
 	How are the results stored in the output folder?
 	By default, the files are symlinked from the work dir, so ensure to dereference
