updated config files

--- a/config/run.config
+++ b/config/run.config
@@ -11,7 +11,7 @@ params {
 	For low volume results, change to "copy" or, if the file system supports it, to "link".
 	(EMBL /scratch does not support "link")
 	*/
-	publish_mode = "symlink"
+	publish_mode = "copy"
 
 	/*
 	Set the paths to pathseq database files.
@@ -69,6 +69,7 @@ params {
 	Set the path to a kraken2 database for host-removal
 	*/
 	remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
+
 
 	/*
 		bbduk qc parameters
