added gtdb markers to config, updated some mtags resource requirements (experimental)

--- a/config/run.config
+++ b/config/run.config
@@ -57,6 +57,8 @@ params {
 	mapseq_db = "/g/scb/zeller/schudoma/mapseq_db/ssu_r89"
 
 
+	GTDB_markers = "/g/scb/zeller/fspringe/Database/GTDB/GTDB_marker_genes_per_species.tsv"
+
 	/*
 	Set the path to the collate script
 	*/
@@ -205,8 +207,8 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
-		//memory = {64.GB * task.attempt}
-		memory = {4.GB * task.attempt}
+		memory = {64.GB * task.attempt}
+		// memory = {4.GB * task.attempt}
 		time = {reads.size() < 10.GB ? '24h' : '7d'}
 		maxRetries = 3
 	}
@@ -215,7 +217,7 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
-		memory = {2.GB * task.attempt}
+		memory = {64.GB * task.attempt}
 		time = '7d'
 		maxRetries = 3
 	}
