--- a/config/run.config
+++ b/config/run.config
@@ -152,6 +152,15 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
+	withName: fq2fa {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {8.GB * task.attempt}
+		time = {2.h * task.attempt}
+		maxRetries = 3
+	}
 	withName: bam2fq {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
