Refactor/nevermore subtree (#4)
### General

* version bump -> 0.6


### Developer / Internal

* nevermore (v0.1) is now included via git subtree
* flagstats() now includes functionality of count_reads_flagstats()
* removed count_reads_flagstats() process
* internal single-end files now use _R1 suffix and step-identifiers
  (orphans, singles, chimeras)
* qc_bbduk_stepwise_amplicon() now uses sample.is_paired to determine single-end processing
* --single_end parameter is obsolete
* internal configuration files are now referenced via the config_dir variable
* assets are now referenced via the asset_dir variable


### User

* non-gzipped fastq files are no longer discovered
* _1/_R1 suffix is no longer required for single-end samples
* added 'individual' and 'pair' mode for host-decontamination
* amplicon analysis results can now be collated
* introduced --mailer parameter to select mail|mailx application for multiqc notifications (broken?)


### Bugfixes

* sorting in qc_bbduk_stepwise_amplicon() uses specific tmp/ directory within the work-dir to avoid issues with /scratch-dir
* mapseq can now be properly used with and without a custom database
* amplicon_analysis workflow no longer uses mTags extract

--- a/config/run.config
+++ b/config/run.config
@@ -2,6 +2,8 @@ params {
 
 	output_dir = "vknight_out"
 
+	mailer = "/usr/bin/mail"
+
 	/*
 	How are the results stored in the output folder?
 	By default, the files are symlinked from the work dir, so ensure to dereference
@@ -9,7 +11,7 @@ params {
 	For low volume results, change to "copy" or, if the file system supports it, to "link".
 	(EMBL /scratch does not support "link")
 	*/
-	publish_mode = "symlink"
+	publish_mode = "copy"
 
 	/*
 	Set the paths to pathseq database files.
@@ -70,6 +72,7 @@ params {
 	Set the path to a kraken2 database for host-removal
 	*/
 	remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
+
 
 	/*
 		bbduk qc parameters
@@ -134,9 +137,6 @@ process {
 		//conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
 		executor = "local"
 	}
-	withName: count_reads {
-		executor = "local"
-	}
 	withName: fastqc {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
@@ -153,6 +153,15 @@ process {
 		cpus = 1
 		memory = {4.GB * task.attempt}
 		time = '7d'
+		maxRetries = 3
+	}
+	withName: fq2fa {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {8.GB * task.attempt}
+		time = {2.h * task.attempt}
 		maxRetries = 3
 	}
 	withName: bam2fq {
@@ -194,7 +203,7 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
-	withName: kraken2 {
+	withLabel: kraken2 {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
