--- a/config/run.config
+++ b/config/run.config
@@ -185,16 +185,7 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
-	withName: remove_host_kraken2 {
-		container = "oras://ghcr.io/cschu/vortex_knight:latest"
-		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-		cpus = 8
-		memory = {64.GB * task.attempt}
-		time = '7d'
-		maxRetries = 3
-	}
-	withName: kraken2 {
+	withLabel: kraken2 {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
