added support for mOTUs3 * renamed all references to mOTUs2 to 'motus' * added mOTUs3 installation to container definition * version bump -> 0.7

--- a/config/run.config
+++ b/config/run.config
@@ -32,10 +32,10 @@ params {
 	Setting this will automatically activate usage of the -db command line parameter.
 	*/
 	motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
-	motus2_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
-	motus2_min_length = 30 // -l
-	motus2_n_marker_genes = 1 // -g
-	motus2_tax_level = "genus" // -k
+	motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
+	motus_min_length = 30 // -l
+	motus_n_marker_genes = 1 // -g
+	motus_tax_level = "genus" // -k
 
 	read_counter_database = "/g/scb/zeller/fspringe/Database/GTDB/all_genes.faa"
 	read_counter_min_length = 75
@@ -221,7 +221,7 @@ process {
 		time = '24h'
 		maxRetries = 3
 	}
-	withName: motus2 {
+	withName: motus {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 6
