added process configs for transfer_fastqs, prepare_fastqs

--- a/config/run.config
+++ b/config/run.config
@@ -141,6 +141,22 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
+	withName: transfer_fastqs {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {4.GB * task.attempt}
+		time = '7d'
+		maxRetries = 3
+	}
+	withName: prepare_fastqs {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {4.GB * task.attempt}
+		time = '7d'
+		maxRetries = 3
+	}
 	withName: fastqc {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
