fix: added collate_stats, v0.12.1

--- a/config/run.config
+++ b/config/run.config
@@ -200,6 +200,12 @@ process {
 		time = {8.h * task.attempt}
 		maxRetries = 3
 	}
+	withName: collate_stats {
+        executor = "local"
+        publishDir = [ path: params.output_dir, mode: params.publish_mode ]
+        errorStrategy = {task.attempt <= 4 ? "retry" : "ignore"}
+        maxRetries = 4
+    }
 }
 
 singularity {
