--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,8 @@
 manifest {
-	author = "Fabian Springer, Jakob Wirbel, Christian Schudoma"
+	author = "Fabian Springer, Selin Pekel, Jakob Wirbel, Christian Schudoma"
 	defaultBranch = "main"
 	description = "Ensemble taxonomic microbiome profiling"
 	name = "vortex_knight"
 	nextflowVersion = ">=21.10.4"
-	version = "0.14.1"
+	version = "0.14.2"
 }
