--- a/nextflow.config
+++ b/nextflow.config
@@ -4,5 +4,9 @@ manifest {
 	description = "Ensemble taxonomic microbiome profiling"
 	name = "vortex_knight"
 	nextflowVersion = ">=21.10.4"
-	version = "0.16.0"
+	version = "0.16.1"
+}
+
+params {
+	run_qa = true
 }
