--- a/nextflow.config
+++ b/nextflow.config
@@ -9,4 +9,43 @@ manifest {
 
 params {
 	run_qa = true
+	run_qc = true
+	remove_host = false
+	drop_orphans = true
+	amplicon_seq = false
+	run_basecounts = true
+	do_bam2fq_conversion = true // vknight bam input requires this
+	decon_mode = "bwa_mem"
+	mapseq_bin = "mapseq"
+
+	idtaxa_error_rate_threshold = 40
+	idtaxa_strand = "both"
+	kraken2_min_hit_groups = 10
+	motus_full_rank_taxonomy = false
+	motus_min_length = 30  // 75?
+	motus_n_marker_genes = 1 // 3?
+	motus_print_counts = false
+	motus_readcount_type = "insert.scaled_counts"
+	motus_tax_level = "mOTU"
+	// pathseq_db_filter_bwa_image
+	// pathseq_db_kmer_file
+	// pathseq_db_microbe_bwa_image
+	// pathseq_db_microbe_dict
+	// pathseq_db_microbe_fasta
+	// pathseq_db_taxonomy_file
+	pathseq_filter_duplicates = true
+	pathseq_min_clipped_read_length = 31 // 40?
+	pathseq_skip_host_alignment = false
+	pathseq_skip_quality_filters = false
+	read_counter_count_mode = "-y insert.raw_counts"
+	read_counter_min_length = 30
+}
+
+singularity {
+	enabled = false
+	autoMounts = true
+}
+
+docker {
+	enabled = true
 }
